# cloudseedcore-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: bridge.rs  lib.rs  params.rs  reverb.rs
src/cxx/: cloudseed_bridge.cpp  cloudseed_bridge.h  cloudseed_shims.h
src/params/: conversion.rs  id.rs  mod.rs
tests/: conversion.rs  params.rs  reverb.rs  reverb_sound.rs
