[package]
name = "cloudseedcore-rs"
description = "A safe wrapper around the CloudSeedCore Reverb algorithm."

version = "0.3.0"
edition = "2024"
license = "MIT"

authors = ["Marius Metzger (CrushedPixel)"]
repository = "https://github.com/CrushedPixel/cloudseedcore-rs"
keywords = ["audio", "reverb", "dsp", "cloudseedcore"]
categories = ["multimedia::audio", "external-ffi-bindings"]

build = "build.rs"

[dependencies]
cxx = "1"
num_enum = "0.7"
lexical-parse-float = "1"

[build-dependencies]
cxx-build = "1"

[dev-dependencies]
hound = "3"
